# gbjit

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cpu_state.rs  executor.rs  lib.rs  main.rs
src/compiler/: code_block.rs  cycle_state.rs  external_bus.rs  instruction.rs  instructions.rs  mod.rs  oneoff_table.rs
src/compiler/codegen/: addhl.rs  addsp.rs  aluhalf.rs  bithalf.rs  call.rs  control.rs  cpl.rs  daa.rs  hlspoffset.rs  incdecfull.rs  incdechalf.rs  jump.rs  ldaddrinc.rs  ldfullimm.rs  ldhalf.rs  ldsphl.rs  mod.rs  pop.rs  push.rs  ret.rs  rst.rs  storesp.rs  util.rs
src/compiler/decoder/: byte_count.rs  byte_kmap.rs  mod.rs
src/devices/: bios.rs  cartridge.rs  device.rs  kind.rs  mod.rs  page.rs  ram.rs
src/devices/memory/: dummy.rs  mod.rs  rom.rs
src/executor/: mod.rs
src/frontend/: gui.rs  headless.rs  mod.rs
src/gb/: event_manager.rs  mod.rs
src/gb/bus/: bios.rs  bus_wrapper.rs  cartridge.rs  dummy.rs  error.rs  io.rs  kind.rs  mod.rs  module.rs  page.rs  ram.rs  rom.rs  wram.rs
src/gb/bus/memory/: dummy.rs  mod.rs  ram.rs
src/gb/devices/: int_controller.rs  macros.rs  mod.rs
src/gb/devices/ppu/: frame.rs  mod.rs  render.rs
