[package]
name = "gbjit"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"
default-run = "gbjit"

[dependencies]
capstone = "0.6"
dynasm = "0.6"
dynasmrt = "0.6"
env_logger = "0.7"
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
memmap = "0.7"
num = "0.2"
quick-error = "1.2"
structopt = "0.3"
