[package]
name = "gbjit"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"
default-run = "gbjit"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0"
capstone = "0.6"
crossbeam-channel = "0.4"
dynasm = "0.6"
dynasmrt = "0.6"
env_logger = "0.7"
glium = "0.27"
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
memmap = "0.7"
num = "0.2"
quick-error = "1.2"
rayon = "1.3"
structopt = "0.3"
